<resources>
    <string name="app_name">Wish Place</string>
    <string name="intro_made_by">Made By imaec</string>

    <!-- Admob Advanced Navtive Ad -->
    <string name="ad_attribution">Sponsored</string>

    <!-- Firebase Analytics Events & Key -->
    <string name="event_screen_fragment">screen_fragment</string>
    <string name="key_screen_fragment">fragment</string>

    <!-- Firebase Crashlytics Events & Key -->
    <string name="key_activity">activity</string>
    <string name="key_fragment">fragment</string>

    <!-- Kakao Template Id -->
    <string name="template_id_app">29639</string>
    <string name="template_id_detail">29642</string>

    <string name="home">Home</string>
    <string name="search">My Place</string>
    <string name="search_result">Search Result</string>
    <string name="setting">Settings</string>

    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="name_hint">Please enter the place you want to go.</string>
    <string name="address">Address</string>
    <string name="address_hint">Please enter the address of the place you want to go.</string>
    <string name="site">Web Site</string>
    <string name="site_hint">Please enter the web site of the place you want to go.\n(homepage, blog, etc.)</string>
    <string name="content">Description</string>
    <string name="content_hint">Please enter a description of the location.</string>
    <string name="lately_keyword">Recent Keyword</string>

    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="recommend_add">Save Place</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="visit">Visit</string>

    <string name="category_title">Category Settings</string>
    <string name="category_select">Select Category</string>
    <string name="category_add">Add Category</string>
    <string name="category_add_desc">Enter a category.</string>
    <string name="category_edit">Edit Category</string>
    <string name="app_info">AppInfo</string>
    <string name="app_version">AppVersion</string>
    <string name="app_license">LicenseInfo</string>
    <string name="app_license_desc">License information for the Icon used in the app.</string>
    <string name="share_app">Share apps with friends</string>

    <!-- Message -->
    <string name="msg_retry">Please try again in a moment.</string>
    <string name="msg_recommend">How about this place?</string>
    <string name="msg_lately_keyword_empty">No recent search terms were found.</string>
    <string name="msg_keyword_empty">Please enter a search term.</string>
    <string name="msg_search_empty">No search results.</string>
    <string name="msg_category_empty">Please enter category.</string>
    <string name="msg_category_add">Please add a category.</string>
    <string name="msg_category_added">Category has been added.</string>
    <string name="msg_category_exist">Category already exists.</string>
    <string name="msg_category_add_canceled">Categories can be added from [Settings] to [Add Category].</string>
    <string name="msg_category_delete">Are you sure want delete the category?</string>
    <string name="msg_category_delete_success">Category has been deleted.</string>
    <string name="msg_category_delete_fail">There are places that use categories.\nPlease change the category.</string>
    <string name="msg_category_edit_fail">Category modification failed.\nDo you want to try again?</string>
    <string name="msg_url_empty">There is no website you have entered.\nWould you like to proceed?</string>
    <string name="msg_image_empty">The site URL you entered could not be imported into the preview.\nWould you like to proceed?</string>
    <string name="msg_write_place_success">Place has been saved!</string>
    <string name="msg_edit_place_success">Place has been modified!</string>
    <string name="msg_edit_place_fail">Modification failed. Please try again in a moment.</string>
    <string name="msg_delete_place">Are you sure want delete the place?</string>
    <string name="msg_delete_success">Place has been deleted.</string>
    <string name="msg_delete_fail">Delete failed. Please try again in a moment.</string>
    <string name="msg_share_fail">Sharing failed.\nPlease try again in a moment.</string>
    <string name="msg_remove_ad">The ad has been deleted!</string>
    <string name="msg_show_ad">From now on, the advertisement will be shown.</string>
    <string name="error_edit_click">The Modify button does not work.\nPlease contact the manager.</string>
    <string name="error_delete_click">The Delete button does not work.\nPlease contact the manager.</string>

    <!-- Transition Name -->
    <string name="transition_place">TRANSITION_PLACE</string>


    <string name="tempUrl">https://newsis.com/pol/?cid=10300</string>
</resources>
