<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.imaec.wishplace.viewmodel.SettingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            style="@style/TextSettingTitle"
            android:id="@+id/text_category_title"
            android:text="@string/category_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_category_add"/>

        <TextView
            style="@style/TextSettingSubTitle"
            android:id="@+id/text_category_add"
            android:layout_marginTop="8dp"
            android:elevation="5dp"
            android:text="@string/category_add"
            android:onClick="onClick"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_category_title"
            app:layout_constraintBottom_toTopOf="@id/text_category_edit"/>

        <TextView
            style="@style/TextSettingSubTitle"
            android:id="@+id/text_category_edit"
            android:elevation="5dp"
            android:text="@string/category_edit"
            android:onClick="onClick"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_category_edit"
            app:layout_constraintBottom_toTopOf="@id/text_app_info"/>

        <TextView
            style="@style/TextSettingTitle"
            android:id="@+id/text_app_info"
            android:text="@string/app_info"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_category_edit"
            app:layout_constraintBottom_toTopOf="@id/text_app_version_title"/>

        <TextView
            style="@style/TextSettingSubTitle"
            android:id="@+id/text_app_version_title"
            android:layout_marginTop="8dp"
            android:elevation="5dp"
            android:text="@string/app_version"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/text_app_version"
            app:layout_constraintTop_toBottomOf="@id/text_app_info"
            app:layout_constraintBottom_toTopOf="@id/text_app_license"/>

        <TextView
            style="@style/TextSettingContent"
            android:id="@+id/text_app_version"
            android:layout_marginTop="8dp"
            android:elevation="5dp"
            android:text="@{viewModel.appVersion}"
            app:layout_constraintLeft_toRightOf="@id/text_app_version_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_app_info"
            app:layout_constraintBottom_toTopOf="@id/text_app_license" />

        <TextView
            style="@style/TextSettingSubTitle"
            android:id="@+id/text_app_license"
            android:elevation="5dp"
            android:text="@string/app_license"
            android:onClick="onClick"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_app_version_title"
            app:layout_constraintBottom_toTopOf="@id/text_share_title"/>

        <TextView
            style="@style/TextSettingTitle"
            android:id="@+id/text_share_title"
            android:text="@string/share"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_app_license" />

        <TextView
            style="@style/TextSettingSubTitle"
            android:id="@+id/text_share"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:onClick="onClick"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/bg_button"
            android:text="@string/share_app"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_share_title"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>