<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="0dp"
    app:cardElevation="0dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingBottom="4dp">

        <ImageView
            android:id="@+id/image_item_thumb"
            android:layout_height="100dp"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:transitionName="@string/transition_place"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:contentDescription="@string/name"
            android:id="@+id/text_item_title"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@{item.name}"
            android:textColor="@color/darkGray"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_item_thumb" />

        <TextView
            android:contentDescription="@string/address"
            android:id="@+id/text_item_addr"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@{item.address}"
            android:textColor="@color/gray"
            android:textSize="10sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_item_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>