<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="item"
            type="com.imaec.wishplace.model.PlaceDTO" />

        <variable
            name="keyword"
            type="String" />

        <variable
            name="option"
            type="String" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="0dp"
        app:cardCornerRadius="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp">

            <ImageView
                android:id="@+id/image_item_thumb"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:transitionName="@string/transition_place"
                app:imgUrl="@{item.imageUrl}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_item_is_visit"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="4dp"
                android:gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:isVisit="@{item.visitFlag}"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/text_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@{item.name}"
                android:textSize="13sp"
                android:textColor="@color/darkGray"
                android:textStyle="bold"
                android:contentDescription="@string/name"
                app:highlight="@{keyword ?? ``}"
                app:option="@{option ?? ``}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_item_thumb"/>

            <TextView
                android:id="@+id/text_item_addr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@{item.address}"
                android:textSize="10sp"
                android:textColor="@color/gray"
                android:contentDescription="@string/address"
                app:highlight="@{keyword ?? ``}"
                app:option="@{option ?? ``}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_item_title"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>